@@ -4,6 +4,7 @@ import static android.app.Activity.RESULT_OK;
 import static android.bluetooth.BluetoothProfile.GATT;
 import static android.os.Build.VERSION_CODES.LOLLIPOP;
 
+import android.annotation.SuppressLint;
 import android.app.Activity;
 import android.bluetooth.BluetoothAdapter;
 import android.bluetooth.BluetoothDevice;
@@ -44,7 +45,7 @@ class BleManager extends ReactContextBaseJavaModule {
     public static final String LOG_TAG = "ReactNativeBleManager";
     private static final int ENABLE_REQUEST = 539;
 
-    private class BondRequest {
+    private static class BondRequest {
         private String uuid;
         private String pin;
         private Callback callback;
@@ -70,6 +71,8 @@ class BleManager extends ReactContextBaseJavaModule {
     private BondRequest bondRequest;
     private BondRequest removeBondRequest;
     private boolean forceLegacy;
+
+    public static ReadableMap moduleOptions;
 
     public ReactApplicationContext getReactContext() {
         return reactContext;
@@ -137,12 +140,13 @@ class BleManager extends ReactContextBaseJavaModule {
             return;
         }
         forceLegacy = false;
+        moduleOptions = options;
         if (options.hasKey("forceLegacy")) {
             forceLegacy = options.getBoolean("forceLegacy");
         }
 
         if (Build.VERSION.SDK_INT >= LOLLIPOP && !forceLegacy) {
-            scanManager = new LollipopScanManager(reactContext, this);
+            scanManager = new DefaultScanManager(reactContext, this);
         } else {
             scanManager = new LegacyScanManager(reactContext, this);
         }
@@ -157,6 +161,7 @@ class BleManager extends ReactContextBaseJavaModule {
         Log.d(LOG_TAG, "BleManager initialized");
     }
 
+    @SuppressLint("MissingPermission")
     @ReactMethod
     public void enableBluetooth(Callback callback) {
         if (getBluetoothAdapter() == null) {
@@ -222,6 +227,8 @@ class BleManager extends ReactContextBaseJavaModule {
         }
     }
 
+
+    @SuppressLint("MissingPermission")
     @ReactMethod
     public void createBond(String peripheralUUID, String peripheralPin, Callback callback) {
         Log.d(LOG_TAG, "Request bond to: " + peripheralUUID);
@@ -243,7 +250,7 @@ class BleManager extends ReactContextBaseJavaModule {
             return;
         } else if (peripheral.getDevice().createBond()) {
             Log.d(LOG_TAG, "Request bond successful for: " + peripheralUUID);
-            bondRequest = new BondRequest(peripheralUUID, peripheralPin, callback); // request bond success, waiting for boradcast
+            bondRequest = new BondRequest(peripheralUUID, peripheralPin, callback); // request bond success, waiting for broadcast
             return;
         }
 
@@ -353,7 +360,7 @@ class BleManager extends ReactContextBaseJavaModule {
         if (peripheral != null) {
             byte[] decoded = new byte[message.size()];
             for (int i = 0; i < message.size(); i++) {
-                decoded[i] = new Integer(message.getInt(i)).byteValue();
+                decoded[i] = Integer.valueOf(i).byteValue();
             }
             Log.d(LOG_TAG, "Message(" + decoded.length + "): " + bytesToHex(decoded));
             peripheral.write(UUIDHelper.uuidFromString(serviceUUID), UUIDHelper.uuidFromString(characteristicUUID),
@@ -374,7 +381,7 @@ class BleManager extends ReactContextBaseJavaModule {
         if (peripheral != null) {
             byte[] decoded = new byte[message.size()];
             for (int i = 0; i < message.size(); i++) {
-                decoded[i] = new Integer(message.getInt(i)).byteValue();
+                decoded[i] = Integer.valueOf(i).byteValue();
             }
             Log.d(LOG_TAG, "Message(" + decoded.length + "): " + bytesToHex(decoded));
             peripheral.write(UUIDHelper.uuidFromString(serviceUUID), UUIDHelper.uuidFromString(characteristicUUID),
@@ -430,7 +437,7 @@ class BleManager extends ReactContextBaseJavaModule {
 
     @ReactMethod
     public void refreshCache(String deviceUUID, Callback callback) {
-        Log.d(LOG_TAG, "Refershing cache for: " + deviceUUID);
+        Log.d(LOG_TAG, "Refreshing cache for: " + deviceUUID);
         Peripheral peripheral = peripherals.get(deviceUUID);
         if (peripheral != null) {
             peripheral.refreshCache(callback);
@@ -454,7 +461,7 @@ class BleManager extends ReactContextBaseJavaModule {
             if (!peripherals.containsKey(address)) {
                 Peripheral peripheral;
                 if (Build.VERSION.SDK_INT >= LOLLIPOP && !forceLegacy) {
-                    peripheral = new LollipopPeripheral(device, reactContext);
+                    peripheral = new DefaultPeripheral(device, reactContext);
                 } else {
                     peripheral = new Peripheral(device, reactContext);
                 }
@@ -492,12 +499,10 @@ class BleManager extends ReactContextBaseJavaModule {
                 case BluetoothAdapter.STATE_TURNING_ON:
                     state = "turning_on";
                     break;
-                case BluetoothAdapter.STATE_OFF:
-                    state = "off";
-                    break;
                 case BluetoothAdapter.STATE_TURNING_OFF:
                     state = "turning_off";
                     break;
+                case BluetoothAdapter.STATE_OFF:
                 default:
                     // should not happen as per https://developer.android.com/reference/android/bluetooth/BluetoothAdapter#getState()
                     state = "off";
@@ -513,11 +518,13 @@ class BleManager extends ReactContextBaseJavaModule {
     }
 
     @ReactMethod
+    @SuppressLint("MissingPermission")
     public void setName(String name) {
         BluetoothAdapter adapter = getBluetoothAdapter();
         adapter.setName(name);
     }
 
+    @SuppressLint("MissingPermission")
     private final BroadcastReceiver mReceiver = new BroadcastReceiver() {
         @Override
         public void onReceive(Context context, Intent intent) {
@@ -558,7 +565,12 @@ class BleManager extends ReactContextBaseJavaModule {
                 final int bondState = intent.getIntExtra(BluetoothDevice.EXTRA_BOND_STATE, BluetoothDevice.ERROR);
                 final int prevState = intent.getIntExtra(BluetoothDevice.EXTRA_PREVIOUS_BOND_STATE,
                         BluetoothDevice.ERROR);
-                BluetoothDevice device = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE);
+                BluetoothDevice device;
+                if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                    device = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE, BluetoothDevice.class);
+                } else {
+                    device = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE);
+                }
 
                 String bondStateStr = "UNKNOWN";
                 switch (bondState) {
@@ -587,7 +599,7 @@ class BleManager extends ReactContextBaseJavaModule {
                 if (bondState == BluetoothDevice.BOND_BONDED) {
                     Peripheral peripheral;
                     if (Build.VERSION.SDK_INT >= LOLLIPOP && !forceLegacy) {
-                        peripheral = new LollipopPeripheral(device, reactContext);
+                        peripheral = new DefaultPeripheral(device, reactContext);
                     } else {
                         peripheral = new Peripheral(device, reactContext);
                     }
@@ -601,7 +613,12 @@ class BleManager extends ReactContextBaseJavaModule {
                     removeBondRequest = null;
                 }
             } else if (action.equals(BluetoothDevice.ACTION_PAIRING_REQUEST)) {
-                BluetoothDevice bluetoothDevice = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE);
+                BluetoothDevice bluetoothDevice;
+                if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                    bluetoothDevice = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE, BluetoothDevice.class);
+                } else {
+                    bluetoothDevice = intent.getParcelableExtra(BluetoothDevice.EXTRA_DEVICE);
+                }
                 if (bondRequest != null && bondRequest.uuid.equals(bluetoothDevice.getAddress()) && bondRequest.pin != null) {
                     bluetoothDevice.setPin(bondRequest.pin.getBytes());
                     bluetoothDevice.createBond();
@@ -645,6 +662,7 @@ class BleManager extends ReactContextBaseJavaModule {
         callback.invoke(null, map);
     }
 
+    @SuppressLint("MissingPermission")
     @ReactMethod
     public void getConnectedPeripherals(ReadableArray serviceUUIDs, Callback callback) {
         Log.d(LOG_TAG, "Get connected peripherals");
@@ -656,8 +674,8 @@ class BleManager extends ReactContextBaseJavaModule {
             return;
         }
 
-        List<BluetoothDevice> periperals = getBluetoothManager().getConnectedDevices(GATT);
-        for (BluetoothDevice entry : periperals) {
+        List<BluetoothDevice> peripherals = getBluetoothManager().getConnectedDevices(GATT);
+        for (BluetoothDevice entry : peripherals) {
             Peripheral peripheral = savePeripheral(entry);
             WritableMap jsonBundle = peripheral.asWritableMap();
             map.pushMap(jsonBundle);
@@ -665,6 +683,7 @@ class BleManager extends ReactContextBaseJavaModule {
         callback.invoke(null, map);
     }
 
+    @SuppressLint("MissingPermission")
     @ReactMethod
     public void getBondedPeripherals(Callback callback) {
         Log.d(LOG_TAG, "Get bonded peripherals");
@@ -673,7 +692,7 @@ class BleManager extends ReactContextBaseJavaModule {
         for (BluetoothDevice device : deviceSet) {
             Peripheral peripheral;
             if (Build.VERSION.SDK_INT >= LOLLIPOP && !forceLegacy) {
-                peripheral = new LollipopPeripheral(device, reactContext);
+                peripheral = new DefaultPeripheral(device, reactContext);
             } else {
                 peripheral = new Peripheral(device, reactContext);
             }
@@ -752,7 +771,7 @@ class BleManager extends ReactContextBaseJavaModule {
                 if (BluetoothAdapter.checkBluetoothAddress(peripheralUUID)) {
                     BluetoothDevice device = bluetoothAdapter.getRemoteDevice(peripheralUUID);
                     if (Build.VERSION.SDK_INT >= LOLLIPOP && !forceLegacy) {
-                        peripheral = new LollipopPeripheral(device, reactContext);
+                        peripheral = new DefaultPeripheral(device, reactContext);
                     } else {
                         peripheral = new Peripheral(device, reactContext);
                     }
